# sphinx-data-viewer

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  README.rst  SUBTREE.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: conf.py  index.rst  requirements.txt  test.json
docs/_static/: custom.css
sphinx_data_viewer/: __init__.py  api.py  directive.py  sphinx_data_viewer.py
sphinx_data_viewer/assets/: jsonview.bundle.css  jsonview_loader.js
src/sphinx_data_viewer/: __init__.py  api.py  directive.py  sphinx_data_viewer.py
tests/: test_basic.py
