[tool.poetry]
name = "sphinx-data-viewer"
version = "0.1.2"
description = "Sphinx extension to show dta in an interacitve list view"
authors = ["team useblocks"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/useblocks/sphinx-data-viewer"
documentation = "https://sphinx-data-viewer.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = "^3.6"
sphinx = "^4"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
