[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx-data-viewer"
dynamic = ["version", "description"]
authors = [{ "name" = "team useblocks", "email" = "info@useblocks.com" }]
license = { file = "LICENSE" }
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.8"
dependencies = ["sphinx>=5"]

[project.urls]
Homepage = "https://github.com/useblocks/sphinx-data-viewer"
Documentation = "https://sphinx-data-viewer.readthedocs.io/en/latest/"

[project.optional-dependencies]
docs = [
    "furo",
    "sphinx-design",
    "sphinx-needs",
    "sphinxcontrib.plantuml",
    "sphinx-copybutton",
]
test = ["pytest", "pytest-cov"]


[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear  
    "C4",  # flake8-comprehensions
    "I",   # isort
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
extend-ignore = ["ISC001", "RUF012"]

[tool.pytest.ini_options]
filterwarnings = ["error::DeprecationWarning"]

[tool.tox]
# To use tox, see https://tox.readthedocs.io
# $ pipx install tox
# it is suggested to use with https://github.com/tox-dev/tox-uv
# $ pipx inject tox tox-uv

legacy_tox_ini = """
[tox]
envlist = py38

[testenv]
usedevelop = true

[testenv:py{38,39,310,311,312}]
extras =
  test
commands =
  pytest {posargs:--cov=src}

[testenv:docs]
extras = 
  docs
passenv =
    BUILDER
    CLEAN
    TERM
commands_pre =
  python -c "import shutil; shutil.rmtree('docs/_build/{env:BUILDER:html}', ignore_errors=True) if '{env:CLEAN:}' else None"
commands = 
  sphinx-build -nW --keep-going -b {env:BUILDER:html} docs/ docs/_build/{env:BUILDER:html} {posargs:-T}
"""
